fix view on mobile bom master data

--- a/public/app-assets/css/custom/custom.css
+++ b/public/app-assets/css/custom/custom.css
@@ -42,6 +42,8 @@ WE WILL RELEASE FUTURE UPDATES SO IN ORDER TO NOT OVERWRITE YOUR STYLES IT'S BET
 	}
 	.modal-footer{
 		margin-bottom:4em;
+		height: 100px !important;
+		overflow: auto;
 	}
 	.dtfc-fixed-right{
 		position: unset !important;
